Fix alignment of block row controls to keep on same row

--- a/src/main/resources/static/css/scripty.css
+++ b/src/main/resources/static/css/scripty.css
@@ -158,16 +158,18 @@ main.home {
 
 #table-blocks td.block-left-controls a.create-below[role="button"],
 .table-blocks-all td.block-left-controls a.create-below[role="button"] {
-    display: inline !important;
+    display: inline-block !important;
     font-size: 1em;
     opacity: 1;
     padding: 0.1em 0.3em;
     min-width: 0;
+    vertical-align: middle;
 }
 
 #table-blocks .block-left-controls .drag-handle,
 .table-blocks-all .block-left-controls .drag-handle {
-    display: inline;
+    display: inline-block !important;
+    vertical-align: middle;
 }
 
 #table-blocks tr.dragging,
@@ -412,6 +414,7 @@ form[hx-post*="/block/"] textarea {
 }
 
 .block-select-checkbox {
+    display: inline-block !important;
     width: 1.1rem;
     height: 1.1rem;
     margin: 0;
